@@ -11,6 +11,7 @@ Bugfixes:
  - GBA: Check for savestates made from differently sized ROMs
  - GBA Video: Fix out-of-bounds tiles in mosaic
  - Qt: Cap the maximum number of multiplayer windows
+ - GBA Audio: Fix audio pitch changing when adjusting buffer size
 Misc:
  - All: Fix sanitize-deb script to set file permissions properly if run as (fake)root
  - All: Enable static linking for Windows
